Modified styles for button and additional text; included min width to prevent text from stretching when window is minimizing

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 
 body {
     display: flex;
-    font-family: Arial, sans-serif;
+    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 img {
@@ -47,15 +47,18 @@ h1 {
 
 .reference,
 .reference a {
+    padding-bottom: 10px;
     color: white;
+    font-size: 10px;
 }
 
 .sign-up-form {
-    background-color: rgb(245, 245, 245);
+    background-color: rgb(247, 250, 251);
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 30px;
+    gap: 25px;
+    min-width: 600px;
 }
 
 .sign-up-form-details {
@@ -85,12 +88,22 @@ fieldset {
 button {
     background-color: rgb(0, 170, 217);
     color: white;
-    padding: 10px 40px;
+    padding: 12px 42px;
     font-size: 15px;
     margin-left: 30px;
     margin-top: 30px;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 2px 5px 5px rgb(215, 215, 215);
 }
 
 .already-have-account {
     padding-left: 30px;
+    font-size: 14px;
+}
+
+.already-have-account a {
+    color: rgb(0, 170, 217);
+    text-decoration: none;
+    font-weight: bold;
 }
